<resources>
    <string name="app_name">UI Assessment</string>
    <string name="request">Request</string>
    <string name="withdraws">Julia, you have left</string>
    <string name="num2">2 withdraws</string>
    <string name="latest_actions">Latest actions</string>
    <string name="daddy">Daddy</string>
    <string name="pocket_money">Pocket money</string>
    <string name="money">+%s€</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="cards">Cards</string>
    <string name="account_balance">Account Balance</string>
    <string name="total">€%s</string>
    <string name="fee_balance">+ 390,00 €</string>
</resources>