<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_each"
    android:layout_width="160dp"
    android:layout_marginStart="10dp"
    android:layout_height="215dp">

    <LinearLayout
        android:id="@+id/parent_box"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:background="@drawable/item_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_200"
            android:transitionName="card"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_account_balance_wallet_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/daddy"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginStart="15dp"
            android:text="@string/pocket_money"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/money"
            android:textColor="@color/teal_200"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/outer_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_outer_container"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/parent_box"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="@id/parent_box"
        app:layout_constraintTop_toTopOf="@id/parent_box"
        app:layout_constraintVertical_bias="1.0" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/custom_fab"
        app:layout_constraintStart_toStartOf="@id/outer_bg"
        app:layout_constraintTop_toTopOf="@id/outer_bg"
        app:layout_constraintEnd_toEndOf="@id/outer_bg"
        app:layout_constraintBottom_toBottomOf="@id/outer_bg"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="215dp"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:id="@+id/cardview2"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:backgroundTint="@color/royal_purple"-->
    <!--        android:transitionName="card"-->
    <!--        app:cardCornerRadius="25dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/direction_image"-->
    <!--            android:layout_width="22dp"-->
    <!--            android:layout_height="22dp"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:src="@drawable/ic_baseline_arrow_forward_24" />-->

    <!--    </androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>